completed the FAQ page, start the privacy page

--- a/faq/index.html
+++ b/faq/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech-lot - Find More</title>
+    <title>Tech-lot - Find out More</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <!-- header -->
     <header>
       <a href="../">
         <div class="logo">
@@ -72,12 +73,57 @@
         </a>
         </button>
     </div>
+    <!-- header end -->
 
     <section class="main-cta">
     </section>
 
-    <h1 class="linear-gradient-text">Frequently Asked Questions.</h1>
+    <h1 class="linear-gradient-text" style="padding-top: 30px;">Frequently Asked Questions.</h1>
 
+    <div class="faq-body">
+      <ul class="faqs">
+        <li class="faq">
+          <h3>What services does Tech-lot provide?</h3>
+          <p><b>Answer:</b> Tech-lot provides a range of technology solutions including software development, IT consulting, cloud computing, cybersecurity, data analytics, and more.</p>
+        </li>
+        <li class="faq">
+          <h3>How experienced is Tech-lot's team of experts?</h3>
+          <p><b>Answer:</b> Tech-lot's team of experts has extensive experience in their respective fields and many hold advanced degrees in computer science, information technology, and related fields.</p>
+        </li>
+        <li class="faq">
+          <h3>How can Tech-lot help improve my company's technology infrastructure?</h3>
+          <p><b>Answer:</b> Tech-lot can assess your company's current technology infrastructure and develop customized solutions that can help improve efficiency, reduce costs, and increase security.</p>
+        </li>
+        <li class="faq">
+          <h3>What is the process for working with Tech-lot on a technology project?</h3>
+          <p><b>Answer:</b> The process for working with Tech-lot typically involves an initial consultation to assess your needs, followed by a proposal outlining the scope of the project, timeline, and costs. Once approved, the project is developed and delivered according to the agreed-upon terms.</p>
+        </li>
+        <li class="faq">
+          <h3>Does Tech-lot provide ongoing maintenance and support services?</h3>
+          <p><b>Answer:</b> Yes, Tech-lot provides ongoing maintenance and support services to ensure that your technology systems remain up-to-date and secure.</p>
+        </li>
+        <li class="faq">
+          <h3>How does Tech-lot ensure the security of my company's data and technology systems?</h3>
+          <p><b>Answer:</b> Tech-lot follows industry-standard best practices for data security and employs the latest security technologies to ensure the safety of your data and technology systems.</p>
+        </li>
+        <li class="faq">
+          <h3>Can Tech-lot help with software development projects?</h3>
+          <p><b>Answer:</b> Yes, Tech-lot provides full-stack software development services and can develop customized solutions for clients with unique needs.</p>
+        </li>
+        <li class="faq">
+          <h3>What industries does Tech-lot specialize in serving?</h3>
+          <p><b>Answer:</b> Tech-lot specializes in serving a range of industries including healthcare, finance, education, government, and more.</p>
+        </li>
+        <li class="faq">
+          <h3>How does Tech-lot stay up-to-date on the latest technology trends and advancements?</h3>
+          <p><b>Answer:</b> Tech-lot's team members participate in ongoing training and professional development programs to stay up-to-date on the latest technology trends and advancements.</p>
+        </li>
+        <li class="faq">
+          <h3>Does Tech-lot offer customized solutions for clients with unique technology needs?</h3>
+          <p><b>Answer:</b> Yes, Tech-lot specializes in providing customized technology solutions tailored to the unique needs of each client.</p>
+        </li>
+      </ul>
+    </div>
     <div class="contact" id="contact">
       <div class="form-container">
         <div class="bg-image">
