--- a/privacy/index.html
+++ b/privacy/index.html
@@ -8,159 +8,86 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header>
-      <a href="../">
-        <div class="logo">
-          <img src="/images/logo.svg" alt="logo" />
-          <h3>Tech-lot</h3>
-        </div>
-      </a>
-
-      <nav>
-        <ul class="nav-link mb-tab-none">
-          <a href="../">
-            <li class="link">Home</li>
-          </a>
-          <a href="../about">
-            <li class="link">About</li>
-          </a>
-          <a href="/">
-            <li class="link active">Services</li>
-          </a>
-          <a href="#contact">
-            <li class="link">Contact</li>
-          </a>
-        </ul>
-        <a href="/">
-          <button
-            style="--bg-color: var(--black-color)"
-            class="mb-none primary-button"
-          >
-            <img src="./images/search-icon.png" alt="" />
-            Search
-          </button>
-        </a>
-        <div class="mobile-menu-icon">
-          <img class="icon-white" src="/images/menu-icon-1.svg" alt="icon" />
-          <img src="/images/menu-icon-2.svg" alt="icon" class="icon-black" />
-        </div>
-      </nav>
-    </header>
-    <div class="mobile-menu">
-      <ul class="nav-link-mobile">
-        <a href="../">
-          <li class="link-mobile">Home</li>
-        </a>
-        <a href="../about">
-          <li class="link-mobile">About</li>
-        </a>
-        <a href="/">
-          <li class="link-mobile active">Services</li>
-        </a>
-        <a href="#contact">
-          <li class="link-mobile">Contact</li>
-        </a>
-      </ul>
-        <a href="./search">
-          <button
-            style="--bg-color: var(--black-color)"
-            class="primary-button"
-          >
-            <img src="./images/search-icon.png" alt="" />
-            Search
-          </button>
-        </a>
-        </button>
+    <a href="../">
+      <div class="logo">
+        <img src="/images/logo.svg" alt="logo" />
+        <h3>Tech-lot</h3>
       </div>
-    </div>
+    </a>
 
-    <section class="main-cta">
-    </section>
+    <!-- privacy -->
 
-    <div class="contact" id="contact">
-      <div class="form-container">
-        <div class="bg-image">
-          <h1>Get in Touch with us</h1>
-          <p>where you will find the same quaility of service and dedication</p>
+    <main>
+      <h1>PRIVACY POLICY</h1>
+      <br />
 
-          <form action="https://formspree.io/f/xoqzqlrl" method="post">
-            <div class="custom-select">
-              <select name="services">
-                <option value="">* Select Services</option>
-                <option value="Technology Soloutions">
-                  Technology Solutions
-                </option>
-                <option value="Embedded Expertise">Embedded Expertise</option>
-                <option value="Corporate Training">Corporate Training</option>
-                <option value="Client Experience">Client Experience</option>
-                <option value="">ATM Service</option>
-              </select>
-            </div>
-
-            <div class="float-container">
-              <input
-                type="text"
-                name="name"
-                required
-                id="name"
-                placeholder="Your Name Here"
-              />
-            </div>
-
-            <div class="in-form">
-              <div class="float-container">
-                <input
-                  type="number"
-                  name="Phone Number"
-                  id="phone"
-                  required
-                  placeholder="* Phone Number"
-                />
-              </div>
-
-              <div class="float-container">
-                <input
-                  type="email"
-                  name="Email"
-                  id="email"
-                  placeholder="* Email Address:"
-                  required
-                />
-              </div>
-
-              <div class="float-container">
-                <input
-                  type="text"
-                  name="company"
-                  placeholder="Your Company Name: (ignore if it individual)"
-                  required
-                />
-              </div>
-            </div>
-
-            <div class="float-container">
-              <textarea
-                name="Message"
-                placeholder="* How can we help you"
-                cols="40"
-                rows="11"
-              ></textarea>
-            </div>
-            <div></div>
-
-            <div class="submit">
-              <button
-                type="submit"
-                style="--bg-color: var(--wine-color)"
-                class="primary-button"
-              >
-                SEND REQUEST
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
+      At Tech-lot, we are committed to protecting the privacy of our customers
+      and visitors. This Privacy Policy explains how we collect, use, and
+      disclose personal information and data that we receive from our customers
+      and visitors.
+      <br />
+      <h2>COLLECTION OF PERSONAL INFORMATION</h2>
+      <br />
+      We may collect personal information that you provide to us when you
+      contact us, create an account on our website, or use our services. This
+      information may include your name, email address, phone number, and other
+      information that you provide to us.
+      <br />
+      <h2>USE OF PERSONAL INFORMATION</h2>
+      <br />
+      We use personal information that we collect to provide and improve our
+      services, to communicate with our customers, and to comply with legal
+      obligations. We may also use personal information to conduct research and
+      analysis to improve our services and to customize your experience on our
+      website.
+      <br />
+      <h2>DISCLOSURE OF PERSONAL INFORMATION</h2>
+      <br />
+      We may disclose personal information to our partners, service providers,
+      and affiliates as necessary to provide and improve our services. We may
+      also disclose personal information as required by law or in response to
+      legal process, including government requests or subpoenas.
+      <br />
+      <h2>PROTECTION OF PERSONAL INFORMATION</h2>
+      <br />
+      We take reasonable measures to protect personal information from
+      unauthorized access, disclosure, and use. We use secure servers and
+      encryption technologies to protect personal information and our employees
+      are trained to handle personal information appropriately.
+      <br />
+      <h2>COOKIES AND TRACKING TECHNOLOGIES</h2>
+      <br />
+      We use cookies and tracking technologies on our website to personalize
+      your experience and to understand how our website is used. We may also use
+      cookies and tracking technologies to serve ads or content on our website
+      or on third-party websites.
+      <br />
+      <h2>LINKS TO OTHER WEBSITES</h2>
+      <br />
+      Our website may contain links to third-party websites. We are not
+      responsible for the privacy practices or content of those websites.
+      <br />
+      <h2>CHANGES TO OUR PRIVACY POLICY</h2>
+      <br />
+      We may update this Privacy Policy from time to time. We will notify you of
+      any material changes to this Privacy Policy by posting the updated Privacy
+      Policy on our website or by other means.
+      <br />
+      CONTACT US
+      <br />
+      If you have any questions or concerns about this Privacy Policy or our
+      privacy practices, please contact us at privacy@tech-lot.com.
+      <br />
+      <h2>POLICY EFFECTIVE DATE</h2>
+      <br />
+      This Privacy Policy is effective as of [date] and applies to all personal
+      information collected by Tech-lot on or after that date.
+      <br />
+      This Privacy Policy is intended to provide a general overview of our
+      privacy practices. If you have any specific questions or concerns, please
+      contact us.
+    </main>
+    <!-- policy end -->
 
     <footer>
       <div class="company-foot">
