completed the FAQ page, start the privacy page

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -16,6 +16,20 @@
     </a>
 
     <!-- privacy -->
+    <section>
+      <ul>
+        <h4>PRIVACY POLICY</h4>
+        <li>COLLECTION OF PERSONAL INFORMATION</li>
+        <li>USE OF PERSONAL INFORMATION</li>
+        <li>DISCLOSURE OF PERSONAL INFORMATION</li>
+        <li>PROTECTION OF PERSONAL INFORMATION</li>
+        <li>COOKIES AND TRACKING TECHNOLOGIES</li>
+        <li>LINKS TO OTHER WEBSITES</li>
+        <li>CHANGES TO OUR PRIVACY POLICY</li>
+        <li>CONTACT US</li>
+        <li>POLICY EFFECTIVE DATE</li>
+      </ul>
+    </section>
 
     <main>
       <h1>PRIVACY POLICY</h1>
@@ -73,7 +87,7 @@
       any material changes to this Privacy Policy by posting the updated Privacy
       Policy on our website or by other means.
       <br />
-      CONTACT US
+      <h2>CONTACT US</h2>
       <br />
       If you have any questions or concerns about this Privacy Policy or our
       privacy practices, please contact us at privacy@tech-lot.com.
