completed the privacy page

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -4,141 +4,147 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech-lot - Find More</title>
+    <title>Privacy Policy - Tech-lot</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <a href="../">
-      <div class="logo">
-        <img src="/images/logo.svg" alt="logo" />
-        <h3>Tech-lot</h3>
-      </div>
-    </a>
-
-    <!-- privacy -->
-    <section>
-      <ul>
-        <h4>PRIVACY POLICY</h4>
-        <li>COLLECTION OF PERSONAL INFORMATION</li>
-        <li>USE OF PERSONAL INFORMATION</li>
-        <li>DISCLOSURE OF PERSONAL INFORMATION</li>
-        <li>PROTECTION OF PERSONAL INFORMATION</li>
-        <li>COOKIES AND TRACKING TECHNOLOGIES</li>
-        <li>LINKS TO OTHER WEBSITES</li>
-        <li>CHANGES TO OUR PRIVACY POLICY</li>
-        <li>CONTACT US</li>
-        <li>POLICY EFFECTIVE DATE</li>
-      </ul>
-    </section>
-
     <main>
-      <h1>PRIVACY POLICY</h1>
-      <br />
-
-      At Tech-lot, we are committed to protecting the privacy of our customers
-      and visitors. This Privacy Policy explains how we collect, use, and
-      disclose personal information and data that we receive from our customers
-      and visitors.
-      <br />
-      <h2>COLLECTION OF PERSONAL INFORMATION</h2>
-      <br />
-      We may collect personal information that you provide to us when you
-      contact us, create an account on our website, or use our services. This
-      information may include your name, email address, phone number, and other
-      information that you provide to us.
-      <br />
-      <h2>USE OF PERSONAL INFORMATION</h2>
-      <br />
-      We use personal information that we collect to provide and improve our
-      services, to communicate with our customers, and to comply with legal
-      obligations. We may also use personal information to conduct research and
-      analysis to improve our services and to customize your experience on our
-      website.
-      <br />
-      <h2>DISCLOSURE OF PERSONAL INFORMATION</h2>
-      <br />
-      We may disclose personal information to our partners, service providers,
-      and affiliates as necessary to provide and improve our services. We may
-      also disclose personal information as required by law or in response to
-      legal process, including government requests or subpoenas.
-      <br />
-      <h2>PROTECTION OF PERSONAL INFORMATION</h2>
-      <br />
-      We take reasonable measures to protect personal information from
-      unauthorized access, disclosure, and use. We use secure servers and
-      encryption technologies to protect personal information and our employees
-      are trained to handle personal information appropriately.
-      <br />
-      <h2>COOKIES AND TRACKING TECHNOLOGIES</h2>
-      <br />
-      We use cookies and tracking technologies on our website to personalize
-      your experience and to understand how our website is used. We may also use
-      cookies and tracking technologies to serve ads or content on our website
-      or on third-party websites.
-      <br />
-      <h2>LINKS TO OTHER WEBSITES</h2>
-      <br />
-      Our website may contain links to third-party websites. We are not
-      responsible for the privacy practices or content of those websites.
-      <br />
-      <h2>CHANGES TO OUR PRIVACY POLICY</h2>
-      <br />
-      We may update this Privacy Policy from time to time. We will notify you of
-      any material changes to this Privacy Policy by posting the updated Privacy
-      Policy on our website or by other means.
-      <br />
-      <h2>CONTACT US</h2>
-      <br />
-      If you have any questions or concerns about this Privacy Policy or our
-      privacy practices, please contact us at privacy@tech-lot.com.
-      <br />
-      <h2>POLICY EFFECTIVE DATE</h2>
-      <br />
-      This Privacy Policy is effective as of [date] and applies to all personal
-      information collected by Tech-lot on or after that date.
-      <br />
-      This Privacy Policy is intended to provide a general overview of our
-      privacy practices. If you have any specific questions or concerns, please
-      contact us.
-    </main>
-    <!-- policy end -->
-
-    <footer>
-      <div class="company-foot">
-        <div class="company-profile">
+      <div class="head-new">
+        <a href="../">
           <div class="logo">
             <img src="/images/logo.svg" alt="logo" />
             <h3>Tech-lot</h3>
           </div>
-
-          <p>
-            The vision of the firm is to foster sharing of IT solutions to the
-            country and also to be the most recognized IT providing high value
-            services to her clients.
-          </p>
-        </div>
-
-        <div class="company-details">
-          <h2>Address</h2>
-          <div class="details">
-            <div class="add-container">
-              <h3>Head Office:</h3>
-              <p>Moyosore Complex, Bolade-Oshodi, Lagos, Nigeria</p>
-            </div>
-            <div class="add-container">
-              <h3>Email:</h3>
-              <p>care@tech-lot.com</p>
-            </div>
-            <div class="add-container">
-              <h3>Telephone:</h3>
-              <p>+2349059084617, +1(555)9187542, +2347063283851</p>
-            </div>
-          </div>
-        </div>
+        </a>
       </div>
 
-      <div class="foot">© Copyright <b>Tech-lot</b> 2023</div>
-    </footer>
+      <section>
+        <h4>PRIVACY POLICY</h4>
+        <ul>
+          <a href=""><li>COLLECTION OF PERSONAL INFORMATION</li></a>
+          <a href=""><li>USE OF PERSONAL INFORMATION</li></a>
+          <a href=""><li>DISCLOSURE OF PERSONAL INFORMATION</li></a>
+          <a href=""><li>PROTECTION OF PERSONAL INFORMATION</li></a>
+          <a href=""><li>COOKIES AND TRACKING TECHNOLOGIES</li></a>
+          <a href=""><li>LINKS TO OTHER WEBSITES</li></a>
+          <a href=""><li>CHANGES TO OUR PRIVACY POLICY</li></a>
+          <a href="#CONTACT-US"><li>CONTACT US</li></a>
+          <a href=""><li>POLICY EFFECTIVE DATE</li></a>
+        </ul>
+      </section>
+
+      <article>
+        <h1>PRIVACY POLICY</h1>
+        <br />
+        <p>
+          At Tech-lot, we are committed to protecting the privacy of our
+          customers and visitors. This Privacy Policy explains how we collect,
+          use, and disclose personal information and data that we receive from
+          our customers and visitors.
+        </p>
+        <br />
+        <br />
+        <br />
+        <h2>COLLECTION OF PERSONAL INFORMATION</h2>
+        <br />
+        <p>
+          We may collect personal information that you provide to us when you
+          contact us, create an account on our website, or use our services.
+          This information may include your name, email address, phone number,
+          and other information that you provide to us.
+        </p>
+        <br />
+        <br />
+        <br />
+        <h2>USE OF PERSONAL INFORMATION</h2>
+        <br />
+        <p>
+          We use personal information that we collect to provide and improve our
+          services, to communicate with our customers, and to comply with legal
+          obligations. We may also use personal information to conduct research
+          and analysis to improve our services and to customize your experience
+          on our website.
+        </p>
+        <br />
+        <br />
+        <br />
+        <h2>DISCLOSURE OF PERSONAL INFORMATION</h2>
+        <br />
+        <p>
+          We may disclose personal information to our partners, service
+          providers, and affiliates as necessary to provide and improve our
+          services. We may also disclose personal information as required by law
+          or in response to legal process, including government requests or
+          subpoenas.
+        </p>
+        <br />
+        <br />
+        <br />
+        <h2>PROTECTION OF PERSONAL INFORMATION</h2>
+        <br />
+        <p>
+          We take reasonable measures to protect personal information from
+          unauthorized access, disclosure, and use. We use secure servers and
+          encryption technologies to protect personal information and our
+          employees are trained to handle personal information appropriately.
+        </p>
+        <br />
+        <br />
+        <br />
+        <h2>COOKIES AND TRACKING TECHNOLOGIES</h2>
+        <br />
+        <p>
+          We use cookies and tracking technologies on our website to personalize
+          your experience and to understand how our website is used. We may also
+          use cookies and tracking technologies to serve ads or content on our
+          website or on third-party websites.
+        </p>
+        <br />
+        <br />
+        <br />
+        <h2>LINKS TO OTHER WEBSITES</h2>
+        <br />
+        <br />
+        <br />
+        <p>
+          Our website may contain links to third-party websites. We are not
+          responsible for the privacy practices or content of those websites.
+        </p>
+        <br />
+        <br />
+        <br />
+        <h2>CHANGES TO OUR PRIVACY POLICY</h2>
+        <br />
+        <p>
+          We may update this Privacy Policy from time to time. We will notify
+          you of any material changes to this Privacy Policy by posting the
+          updated Privacy Policy on our website or by other means.
+        </p>
+        <br />
+        <br />
+        <br />
+        <h2 id="CONTACT-US">CONTACT US</h2>
+        <br />
+        <p>
+          If you have any questions or concerns about this Privacy Policy or our
+          privacy practices, please contact us at privacy@tech-lot.com.
+        </p>
+        <br />
+        <br />
+        <br />
+        <h2>POLICY EFFECTIVE DATE</h2>
+        <br />
+        <p>
+          This Privacy Policy is effective as of [date] and applies to all
+          personal information collected by Tech-lot on or after that date.
+          <br />
+          <br />
+          This Privacy Policy is intended to provide a general overview of our
+          privacy practices. If you have any specific questions or concerns,
+          please contact us.
+        </p>
+      </article>
+    </main>
   </body>
   <script src="../scripts/header.js"></script>
   <script src="..//scripts/contact.js"></script>
