faq page responsiveness

--- a/index.html
+++ b/index.html
@@ -88,14 +88,16 @@
           The firm was founded in 2015 by Lateef Rasaq.
         </p>
 
-        <button style="--bg-color: var(--wine-color)" class="primary-button">
-          Send Request
-          <img
-            src="/images/arrow.svg"
-            alt="arrow"
-            style="width: 24px; margin-left: 7px"
-          />
-        </button>
+        <a href="#contact">
+          <button style="--bg-color: var(--wine-color)" class="primary-button">
+            Send Request
+            <img
+              src="/images/arrow.svg"
+              alt="arrow"
+              style="width: 24px; margin-left: 7px"
+            />
+          </button>
+        </a>
       </div>
     </div>
 
