started the admins board

--- a/moderator/index.html
+++ b/moderator/index.html
@@ -30,7 +30,9 @@
             id="password"
           />
           <button type="submit">Login</button>
-          <a class="forget-password" href="#">Forgot Password?</a>
+          <a class="forget-password" id="forget-password" href="#"
+            >Forgot Password?</a
+          >
         </form>
       </div>
     </main>
