started the admins board

--- a/moderator/_/index.html
+++ b/moderator/_/index.html
@@ -50,7 +50,7 @@
             </div>
             <span class="title">FAQs</span>
           </a>
-          <a href="#request">
+          <a href="#request-form">
             <div class="nav-list">
               <img
                 src="./images/message-box-d026fb49c2f49d0bae1755f997af409d.svg"
