continue working on the control board

--- a/moderator/_/index.html
+++ b/moderator/_/index.html
@@ -63,11 +63,22 @@
       </div>
       <section>
         <h1>HI <span>Admin</span>,</h1>
-        <div class="board" id="teams"></div>
-        <div class="board" id="services"></div>
-        <div class="board" id="faqs"></div>
-        <div class="board" id="request-form"></div>
+        <div class="main-bar">
+          <div class="board open" id="teams">
+            <h1>TEAMS</h1>
+          </div>
+          <div class="board" id="services">
+            <h1>SERVICES</h1>
+          </div>
+          <div class="board" id="faqs">
+            <h1>FAQs</h1>
+          </div>
+          <div class="board" id="request-form">
+            <h1>REQUEST/COMPLAINT FORM</h1>
+          </div>
+        </div>
       </section>
     </main>
   </body>
+  <script src="./file.js"></script>
 </html>
