--- a/privacy/index.html
+++ b/privacy/index.html
@@ -21,13 +21,27 @@
       <section>
         <h4>PRIVACY POLICY</h4>
         <ul>
-          <a href=""><li>COLLECTION OF PERSONAL INFORMATION</li></a>
-          <a href=""><li>USE OF PERSONAL INFORMATION</li></a>
-          <a href=""><li>DISCLOSURE OF PERSONAL INFORMATION</li></a>
-          <a href=""><li>PROTECTION OF PERSONAL INFORMATION</li></a>
-          <a href=""><li>COOKIES AND TRACKING TECHNOLOGIES</li></a>
-          <a href=""><li>LINKS TO OTHER WEBSITES</li></a>
-          <a href=""><li>CHANGES TO OUR PRIVACY POLICY</li></a>
+          <a href="#COLLECTION-OF-PERSONAL-INFORMATION"
+            ><li>COLLECTION OF PERSONAL INFORMATION</li></a
+          >
+          <a href="#USE-OF-PERSONAL-INFORMATION"
+            ><li>USE OF PERSONAL INFORMATION</li></a
+          >
+          <a href="#DISCLOSURE-OF-PERSONAL-INFORMATION"
+            ><li>DISCLOSURE OF PERSONAL INFORMATION</li></a
+          >
+          <a href="#PROTECTION-OF-PERSONAL-INFORMATION"
+            ><li>PROTECTION OF PERSONAL INFORMATION</li></a
+          >
+          <a href="#COOKIES-AND-TRACKING-TECHNOLOGIES"
+            ><li>COOKIES AND TRACKING TECHNOLOGIES</li></a
+          >
+          <a href="#LINKS-TO-OTHER-WEBSITES"
+            ><li>LINKS TO OTHER WEBSITES</li></a
+          >
+          <a href="#CHANGES-TO-OUR-PRIVACY-POLICY"
+            ><li>CHANGES TO OUR PRIVACY POLICY</li></a
+          >
           <a href="#CONTACT-US"><li>CONTACT US</li></a>
           <a href=""><li>POLICY EFFECTIVE DATE</li></a>
         </ul>
@@ -45,7 +59,9 @@
         <br />
         <br />
         <br />
-        <h2>COLLECTION OF PERSONAL INFORMATION</h2>
+        <h2 id="COLLECTION-OF-PERSONAL-INFORMATIONY">
+          COLLECTION OF PERSONAL INFORMATION
+        </h2>
         <br />
         <p>
           We may collect personal information that you provide to us when you
@@ -56,7 +72,7 @@
         <br />
         <br />
         <br />
-        <h2>USE OF PERSONAL INFORMATION</h2>
+        <h2 id="USE-OF-PERSONAL-INFORMATION">USE OF PERSONAL INFORMATION</h2>
         <br />
         <p>
           We use personal information that we collect to provide and improve our
@@ -68,7 +84,9 @@
         <br />
         <br />
         <br />
-        <h2>DISCLOSURE OF PERSONAL INFORMATION</h2>
+        <h2 id="DISCLOSURE-OF-PERSONAL-INFORMATION">
+          DISCLOSURE OF PERSONAL INFORMATION
+        </h2>
         <br />
         <p>
           We may disclose personal information to our partners, service
@@ -80,7 +98,9 @@
         <br />
         <br />
         <br />
-        <h2>PROTECTION OF PERSONAL INFORMATION</h2>
+        <h2 id="PROTECTION-OF-PERSONAL-INFORMATION">
+          PROTECTION OF PERSONAL INFORMATION
+        </h2>
         <br />
         <p>
           We take reasonable measures to protect personal information from
@@ -91,7 +111,9 @@
         <br />
         <br />
         <br />
-        <h2>COOKIES AND TRACKING TECHNOLOGIES</h2>
+        <h2 id="COOKIES-AND-TRACKING-TECHNOLOGIES">
+          COOKIES AND TRACKING TECHNOLOGIES
+        </h2>
         <br />
         <p>
           We use cookies and tracking technologies on our website to personalize
@@ -102,9 +124,7 @@
         <br />
         <br />
         <br />
-        <h2>LINKS TO OTHER WEBSITES</h2>
-        <br />
-        <br />
+        <h2 id="LINKS-TO-OTHER-WEBSITES">LINKS TO OTHER WEBSITES</h2>
         <br />
         <p>
           Our website may contain links to third-party websites. We are not
@@ -113,7 +133,9 @@
         <br />
         <br />
         <br />
-        <h2>CHANGES TO OUR PRIVACY POLICY</h2>
+        <h2 id="CHANGES-TO-OUR-PRIVACY-POLICY">
+          CHANGES TO OUR PRIVACY POLICY
+        </h2>
         <br />
         <p>
           We may update this Privacy Policy from time to time. We will notify
@@ -132,7 +154,17 @@
         <br />
         <br />
         <br />
-        <h2>POLICY EFFECTIVE DATE</h2>
+        <h2
+          id="COLLECTION OF PERSONAL INFORMATION
+USE OF PERSONAL INFORMATION
+DISCLOSURE OF PERSONAL INFORMATION
+PROTECTION OF PERSONAL INFORMATION
+COOKIES AND TRACKING TECHNOLOGIES
+LINKS TO OTHER WEBSITES
+CHANGES TO OUR PRIVACY POLICY"
+        >
+          POLICY EFFECTIVE DATE
+        </h2>
         <br />
         <p>
           This Privacy Policy is effective as of [date] and applies to all
