added table for team listing

--- a/moderator/_/index.html
+++ b/moderator/_/index.html
@@ -4,15 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Control Board</title>
+    <title>Conthol Board</title>
     <link rel="stylesheet" href="./style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
   </head>
   <body>
     <main>
@@ -62,10 +55,82 @@
         </nav>
       </div>
       <section>
-        <h1>HI <span>Admin</span>,</h1>
+        <h1>Hi <span>Admin</span>,</h1>
         <div class="main-bar">
           <div class="board open" id="teams">
-            <h1>TEAMS</h1>
+            <div class="board-head">
+              <h3>TEAM MEMBER LIST</h3>
+              <button>ADD</button>
+            </div>
+            <div class="team-listing">
+              <table>
+                <tr>
+                  <th>S/N</th>
+                  <th>Picture</th>
+                  <th>Name</th>
+                  <th>Post</th>
+                  <th>Location</th>
+                  <th>LinkedIn Url</th>
+                  <th>remove</th>
+                </tr>
+                <tr>
+                  <td>1.</td>
+                  <td><img src="/images/persons (1).jpg" alt="Picture" /></td>
+                  <td>Abdullateef Gafar</td>
+                  <td>CEO/Founder</td>
+                  <td>SAN CISSE, USA</td>
+                  <td>https://linkedin.com/in/abdullateef.gafar</td>
+                </tr>
+                <tr>
+                  <td>1.</td>
+                  <td><img src="/images/persons (1).jpg" alt="Picture" /></td>
+                  <td>Abdullateef Gafar</td>
+                  <td>CEO/Founder</td>
+                  <td>SAN CISSE, USA</td>
+                  <td>https://linkedin.com/in/abdullateef.gafar</td>
+                </tr>
+                <tr>
+                  <td>1.</td>
+                  <td><img src="/images/persons (1).jpg" alt="Picture" /></td>
+                  <td>Abdullateef Gafar</td>
+                  <td>CEO/Founder</td>
+                  <td>SAN CISSE, USA</td>
+                  <td>https://linkedin.com/in/abdullateef.gafar</td>
+                </tr>
+                <tr>
+                  <td>1.</td>
+                  <td><img src="/images/persons (1).jpg" alt="Picture" /></td>
+                  <td>Abdullateef Gafar</td>
+                  <td>CEO/Founder</td>
+                  <td>SAN CISSE, USA</td>
+                  <td>https://linkedin.com/in/abdullateef.gafar</td>
+                </tr>
+                <tr>
+                  <td>1.</td>
+                  <td><img src="/images/persons (1).jpg" alt="Picture" /></td>
+                  <td>Abdullateef Gafar</td>
+                  <td>CEO/Founder</td>
+                  <td>SAN CISSE, USA</td>
+                  <td>https://linkedin.com/in/abdullateef.gafar</td>
+                </tr>
+                <tr>
+                  <td>1.</td>
+                  <td><img src="/images/persons (1).jpg" alt="Picture" /></td>
+                  <td>Abdullateef Gafar</td>
+                  <td>CEO/Founder</td>
+                  <td>SAN CISSE, USA</td>
+                  <td>https://linkedin.com/in/abdullateef.gafar</td>
+                </tr>
+                <tr>
+                  <td>1.</td>
+                  <td><img src="/images/persons (1).jpg" alt="Picture" /></td>
+                  <td>Abdullateef Gafar</td>
+                  <td>CEO/Founder</td>
+                  <td>SAN CISSE, USA</td>
+                  <td>https://linkedin.com/in/abdullateef.gafar</td>
+                </tr>
+              </table>
+            </div>
           </div>
           <div class="board" id="services">
             <h1>SERVICES</h1>
