added table for team listing

--- a/moderator/_/index.html
+++ b/moderator/_/index.html
@@ -80,6 +80,7 @@
                   <td>CEO/Founder</td>
                   <td>SAN CISSE, USA</td>
                   <td>https://linkedin.com/in/abdullateef.gafar</td>
+                  <td><button class="red">del</button></td>
                 </tr>
                 <tr>
                   <td>1.</td>
@@ -88,6 +89,7 @@
                   <td>CEO/Founder</td>
                   <td>SAN CISSE, USA</td>
                   <td>https://linkedin.com/in/abdullateef.gafar</td>
+                  <td><button class="red">del</button></td>
                 </tr>
                 <tr>
                   <td>1.</td>
@@ -96,6 +98,7 @@
                   <td>CEO/Founder</td>
                   <td>SAN CISSE, USA</td>
                   <td>https://linkedin.com/in/abdullateef.gafar</td>
+                  <td><button class="red">del</button></td>
                 </tr>
                 <tr>
                   <td>1.</td>
@@ -104,6 +107,7 @@
                   <td>CEO/Founder</td>
                   <td>SAN CISSE, USA</td>
                   <td>https://linkedin.com/in/abdullateef.gafar</td>
+                  <td><button class="red">del</button></td>
                 </tr>
                 <tr>
                   <td>1.</td>
@@ -112,6 +116,7 @@
                   <td>CEO/Founder</td>
                   <td>SAN CISSE, USA</td>
                   <td>https://linkedin.com/in/abdullateef.gafar</td>
+                  <td><button class="red">del</button></td>
                 </tr>
                 <tr>
                   <td>1.</td>
@@ -120,6 +125,7 @@
                   <td>CEO/Founder</td>
                   <td>SAN CISSE, USA</td>
                   <td>https://linkedin.com/in/abdullateef.gafar</td>
+                  <td><button class="red">del</button></td>
                 </tr>
                 <tr>
                   <td>1.</td>
@@ -128,6 +134,7 @@
                   <td>CEO/Founder</td>
                   <td>SAN CISSE, USA</td>
                   <td>https://linkedin.com/in/abdullateef.gafar</td>
+                  <td><button class="red">del</button></td>
                 </tr>
               </table>
             </div>
