--- a/moderator/_/index.html
+++ b/moderator/_/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Conthol Board</title>
+    <title>Control Board</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -55,12 +55,12 @@
         </nav>
       </div>
       <section>
-        <h1>Hi <span>Admin</span>,</h1>
+        <h1>Hi ADMIN</h1>
         <div class="main-bar">
           <div class="board open" id="teams">
             <div class="board-head">
               <h3>TEAM MEMBER LIST</h3>
-              <button>ADD</button>
+              <button onclick="toggleOpenForm()">ADD</button>
             </div>
             <div class="team-listing">
               <table>
@@ -73,84 +73,70 @@
                   <th>LinkedIn Url</th>
                   <th>remove</th>
                 </tr>
-                <tr>
-                  <td>1.</td>
-                  <td><img src="/images/persons (1).jpg" alt="Picture" /></td>
-                  <td>Abdullateef Gafar</td>
-                  <td>CEO/Founder</td>
-                  <td>SAN CISSE, USA</td>
-                  <td>https://linkedin.com/in/abdullateef.gafar</td>
-                  <td><button class="red">del</button></td>
-                </tr>
-                <tr>
-                  <td>1.</td>
-                  <td><img src="/images/persons (1).jpg" alt="Picture" /></td>
-                  <td>Abdullateef Gafar</td>
-                  <td>CEO/Founder</td>
-                  <td>SAN CISSE, USA</td>
-                  <td>https://linkedin.com/in/abdullateef.gafar</td>
-                  <td><button class="red">del</button></td>
-                </tr>
-                <tr>
-                  <td>1.</td>
-                  <td><img src="/images/persons (1).jpg" alt="Picture" /></td>
-                  <td>Abdullateef Gafar</td>
-                  <td>CEO/Founder</td>
-                  <td>SAN CISSE, USA</td>
-                  <td>https://linkedin.com/in/abdullateef.gafar</td>
-                  <td><button class="red">del</button></td>
-                </tr>
-                <tr>
-                  <td>1.</td>
-                  <td><img src="/images/persons (1).jpg" alt="Picture" /></td>
-                  <td>Abdullateef Gafar</td>
-                  <td>CEO/Founder</td>
-                  <td>SAN CISSE, USA</td>
-                  <td>https://linkedin.com/in/abdullateef.gafar</td>
-                  <td><button class="red">del</button></td>
-                </tr>
-                <tr>
-                  <td>1.</td>
-                  <td><img src="/images/persons (1).jpg" alt="Picture" /></td>
-                  <td>Abdullateef Gafar</td>
-                  <td>CEO/Founder</td>
-                  <td>SAN CISSE, USA</td>
-                  <td>https://linkedin.com/in/abdullateef.gafar</td>
-                  <td><button class="red">del</button></td>
-                </tr>
-                <tr>
-                  <td>1.</td>
-                  <td><img src="/images/persons (1).jpg" alt="Picture" /></td>
-                  <td>Abdullateef Gafar</td>
-                  <td>CEO/Founder</td>
-                  <td>SAN CISSE, USA</td>
-                  <td>https://linkedin.com/in/abdullateef.gafar</td>
-                  <td><button class="red">del</button></td>
-                </tr>
-                <tr>
-                  <td>1.</td>
-                  <td><img src="/images/persons (1).jpg" alt="Picture" /></td>
-                  <td>Abdullateef Gafar</td>
-                  <td>CEO/Founder</td>
-                  <td>SAN CISSE, USA</td>
-                  <td>https://linkedin.com/in/abdullateef.gafar</td>
-                  <td><button class="red">del</button></td>
-                </tr>
+                <tbody id="list-team"></tbody>
               </table>
+              <div id="none">
+                <div class="loading"></div>
+                <p>No Member Added Yet</p>
+              </div>
+            </div>
+
+            <div class="add-team-form-board">
+              <form action="#" id="add-form">
+                <label for="picture">
+                  <span id="image">Click here to add Picture</span>
+                  <input
+                    type="file"
+                    id="picture"
+                    onchange="loadImage(event)"
+                    accept="image/*"
+                    style="display: none"
+                  />
+                </label>
+                <label for="name">Name:<input type="text" id="name" /></label>
+                <label for="post">Post:<input type="text" id="post" /></label>
+                <label for="location"
+                  >Location:<input type="text" id="location"
+                /></label>
+                <label for="linkedin"
+                  >LinkedIn Url:<input type="text" id="linkedin"
+                /></label>
+                <div class="btn-bottom">
+                  <button onclick="addTeamMember()">Add Member</button>
+                  <button onclick="toggleOpenForm()" class="red">Cancel</button>
+                </div>
+              </form>
             </div>
           </div>
-          <div class="board" id="services">
-            <h1>SERVICES</h1>
-          </div>
-          <div class="board" id="faqs">
-            <h1>FAQs</h1>
-          </div>
-          <div class="board" id="request-form">
+          <div class="board" id="services" c>
             <h1>REQUEST/COMPLAINT FORM</h1>
           </div>
         </div>
       </section>
     </main>
   </body>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.19.1/firebase.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyBM8krsrITMACO0twpCEJLzRoGhVsw-S_g",
+      authDomain: "tech-lot.firebaseapp.com",
+      databaseURL: "https://tech-lot-default-rtdb.firebaseio.com",
+      projectId: "tech-lot",
+      storageBucket: "tech-lot.appspot.com",
+      messagingSenderId: "572043058764",
+      appId: "1:572043058764:web:52b9264ee8d7edf9e4dee9",
+      measurementId: "G-KR7P391F1T",
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
   <script src="./file.js"></script>
 </html>
