reverse to complete demo without firebase

--- a/moderator/_/index.html
+++ b/moderator/_/index.html
@@ -108,7 +108,13 @@
               </form>
             </div>
           </div>
-          <div class="board" id="services" c>
+          <div class="board" id="services">
+            <h1>SERVICES</h1>
+          </div>
+          <div class="board" id="faqs">
+            <h1>FAQs</h1>
+          </div>
+          <div class="board" id="request-form">
             <h1>REQUEST/COMPLAINT FORM</h1>
           </div>
         </div>
